kubernetes/apps/radarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr.mpdavis.com`)
      kind: Rule
      middlewares:
        - name: authelia
          namespace: authelia
      services:
        - name: radarr
          port: 7878
  tls: {}
